game implementation done